--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=schoolmanagement
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/school_management
+spring.datasource.username=root
+spring.datasource.password=Mugunthan@4511
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
